<resources>
    <string name="app_name">HandsFreeCalculator</string>
    <string name="title_activity_calc">CalcActivity</string>
    <string name="clear">AC</string>
    <string name="pos_neg">+/-</string>
    <string name="mod">%</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="times">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="voice_button">Press for voice only</string>
    <string name="modulo">%</string>
    <string name="prompt">Say your calculation.</string>
</resources>
